src/matf/petar/FPInterpreter/gen/FPParserParser.java
// Generated from C:/Users/Petar Vukmirovic/IdeaProjects/FPInterpreter/src/grammar\FPParser.g4 by ANTLR 4.5.1
package matf.petar.FPInterpreter.gen;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FPParserParser extends Parser {
	public static final int
			T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
			T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
			T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, T__22 = 23, T__23 = 24,
			T__24 = 25, T__25 = 26, T__26 = 27, T__27 = 28, T__28 = 29, T__29 = 30, T__30 = 31,
			T__31 = 32, T__32 = 33, T__33 = 34, T__34 = 35, T__35 = 36, COMMENT = 37, DOT = 38,
			FUN_ID = 39, NUM = 40, BOOL = 41, WS = 42;
	public static final int
			RULE_program = 0, RULE_definition = 1, RULE_expression = 2, RULE_functional_form = 3,
			RULE_construction = 4, RULE_conditional = 5, RULE_constant = 6, RULE_function = 7,
		RULE_built_in_function = 8, RULE_atom = 9, RULE_list = 10;
	public static final String[] ruleNames = {
			"program", "definition", "expression", "functional_form", "construction",
		"conditional", "constant", "function", "built_in_function", "atom", "list"
	};
	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	public static final ATN _ATN =
			new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
			new PredictionContextCache();
	private static final String[] _LITERAL_NAMES = {
			null, "'DEF'", "'='", "':'", "'APPLY-ALL'", "'INSERT-LEFT'", "'INSERT-RIGHT'",
			"'BU'", "'WHILE'", "'('", "')'", "'['", "','", "']'", "'->'", "';'", "'~'",
			"'tail'", "'id'", "'eq'", "'eq0'", "'gt'", "'ge'", "'*'", "'/'", "'+'",
			"'-'", "'a'", "'s'", "'apndl'", "'apndr'", "'distl'", "'distr'", "'iota'",
			"'<>'", "'<'", "'>'", null, "'.'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
			null, null, null, null, null, null, null, null, null, null, null, null,
			null, null, null, null, null, null, null, null, null, null, null, null,
			null, null, null, null, null, null, null, null, null, null, null, null,
			null, "COMMENT", "DOT", "FUN_ID", "NUM", "BOOL", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	static {
		RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION);
	}

	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}

	public FPParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FPParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(24);
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(24);
				switch (_input.LA(1)) {
				case T__0:
					{
					setState(22);
					definition();
					}
					break;
				case T__3:
				case T__4:
				case T__5:
				case T__6:
					case T__7:
				case T__8:
					case T__10:
				case T__15:
				case T__16:
				case T__17:
				case T__18:
				case T__19:
				case T__20:
				case T__21:
				case T__22:
				case T__23:
				case T__24:
				case T__25:
				case T__26:
				case T__27:
				case T__28:
				case T__29:
				case T__30:
				case T__31:
				case T__32:
					case T__33:
					case T__34:
				case FUN_ID:
				case NUM:
				case BOOL:
					{
					setState(23);
					expression();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(26);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__10) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << T__32) | (1L << T__33) | (1L << T__34) | (1L << FUN_ID) | (1L << NUM) | (1L << BOOL))) != 0));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			match(T__0);
			setState(29);
			match(FUN_ID);
			setState(30);
			match(T__1);
			setState(31);
			functional_form(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expression);
		try {
			setState(38);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(33);
				functional_form(0);
				setState(34);
				match(T__2);
				setState(35);
				expression();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(37);
				atom();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public final Functional_formContext functional_form() throws RecognitionException {
		return functional_form(0);
	}

	private Functional_formContext functional_form(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Functional_formContext _localctx = new Functional_formContext(_ctx, _parentState);
		Functional_formContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_functional_form, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
				setState(63);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				_localctx = new ApplyAllContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(41);
				match(T__3);
				setState(42);
					functional_form(11);
				}
				break;
			case 2:
				{
				_localctx = new InsertLeftContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(43);
				match(T__4);
				setState(44);
					functional_form(10);
				}
				break;
			case 3:
				{
				_localctx = new InsertRightContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(45);
				match(T__5);
				setState(46);
					functional_form(9);
				}
				break;
			case 4:
				{
					_localctx = new BinaryToUnaryContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(47);
					match(T__6);
					setState(48);
					function();
					setState(49);
					atom();
				}
				break;
			case 5:
				{
					_localctx = new WhileContext(_localctx);
					_ctx = _localctx;
					_prevctx = _localctx;
					setState(51);
					match(T__7);
					setState(52);
					functional_form(0);
					setState(53);
					functional_form(0);
				}
			break;
				case 6: {
					_localctx = new ConstructionLabelContext(_localctx);
					_ctx = _localctx;
					_prevctx = _localctx;
					setState(55);
					construction();
				}
				break;
				case 7: {
				_localctx = new ConditionalLabelContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
					setState(56);
				conditional();
				}
				break;
				case 8:
				{
				_localctx = new ConstantLabelContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
					setState(57);
				constant();
				}
				break;
				case 9:
				{
				_localctx = new ParenthsContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
					setState(58);
					match(T__8);
					setState(59);
				functional_form(0);
					setState(60);
					match(T__9);
				}
				break;
				case 10:
				{
				_localctx = new ElementaryContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
					setState(62);
				function();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
				setState(70);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new CompositionContext(new Functional_formContext(_parentctx, _parentState));
					pushNewRecursionContext(_localctx, _startState, RULE_functional_form);
						setState(65);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(66);
					match(DOT);
						setState(67);
					functional_form(3);
					}
					}
				}
				setState(72);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public final ConstructionContext construction() throws RecognitionException {
		ConstructionContext _localctx = new ConstructionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_construction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(73);
				match(T__10);
				setState(74);
			functional_form(0);
				setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
				while (_la == T__11) {
				{
				{
					setState(75);
					match(T__11);
					setState(76);
				functional_form(0);
				}
				}
					setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
				setState(82);
				match(T__12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public final ConditionalContext conditional() throws RecognitionException {
		ConditionalContext _localctx = new ConditionalContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_conditional);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(84);
				match(T__8);
				setState(85);
			functional_form(0);
				setState(86);
				match(T__13);
				setState(87);
			functional_form(0);
				setState(88);
				match(T__14);
				setState(89);
			functional_form(0);
				setState(90);
				match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public final ConstantContext constant() throws RecognitionException {
		ConstantContext _localctx = new ConstantContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_constant);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(92);
				match(T__15);
				setState(93);
			match(NUM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_function);
		try {
			setState(97);
			switch (_input.LA(1)) {
			case T__16:
			case T__17:
			case T__18:
			case T__19:
			case T__20:
			case T__21:
			case T__22:
			case T__23:
			case T__24:
			case T__25:
			case T__26:
			case T__27:
			case T__28:
			case T__29:
			case T__30:
				case T__31:
				case T__32:
			case NUM:
				enterOuterAlt(_localctx, 1);
				{
					setState(95);
				built_in_function();
				}
				break;
			case FUN_ID:
				enterOuterAlt(_localctx, 2);
				{
					setState(96);
				match(FUN_ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public final Built_in_functionContext built_in_function() throws RecognitionException {
		Built_in_functionContext _localctx = new Built_in_functionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_built_in_function);
		int _la;
		try {
			setState(114);
			switch (_input.LA(1)) {
				case NUM:
					_localctx = new NumContext(_localctx);
					enterOuterAlt(_localctx, 1);
				{
					setState(99);
					match(NUM);
				}
				break;
				case T__16:
					_localctx = new TailContext(_localctx);
					enterOuterAlt(_localctx, 2);
				{
					setState(100);
					match(T__16);
				}
				break;
				case T__17:
					_localctx = new IdContext(_localctx);
					enterOuterAlt(_localctx, 3);
				{
					setState(101);
					match(T__17);
				}
				break;
				case T__18:
					_localctx = new EqContext(_localctx);
					enterOuterAlt(_localctx, 4);
				{
					setState(102);
					match(T__18);
				}
				break;
				case T__19:
					_localctx = new Eq0Context(_localctx);
					enterOuterAlt(_localctx, 5);
				{
					setState(103);
					match(T__19);
				}
				break;
				case T__20:
					_localctx = new GtContext(_localctx);
					enterOuterAlt(_localctx, 6);
				{
					setState(104);
					match(T__20);
				}
				break;
				case T__21:
					_localctx = new GeContext(_localctx);
					enterOuterAlt(_localctx, 7);
				{
					setState(105);
					match(T__21);
				}
				break;
				case T__22:
				case T__23:
				case T__24:
				case T__25:
					_localctx = new ArithmeticContext(_localctx);
					enterOuterAlt(_localctx, 8);
				{
					setState(106);
					_la = _input.LA(1);
					if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << T__25))) != 0))) {
						_errHandler.recoverInline(this);
					} else {
						consume();
				}
				}
				break;
				case T__26:
					_localctx = new AContext(_localctx);
					enterOuterAlt(_localctx, 9);
				{
					setState(107);
					match(T__26);
				}
				break;
				case T__27:
					_localctx = new SContext(_localctx);
					enterOuterAlt(_localctx, 10);
				{
					setState(108);
					match(T__27);
				}
				break;
				case T__28:
					_localctx = new ApndlContext(_localctx);
					enterOuterAlt(_localctx, 11);
				{
					setState(109);
					match(T__28);
				}
				break;
				case T__29:
					_localctx = new ApndrContext(_localctx);
					enterOuterAlt(_localctx, 12);
				{
					setState(110);
					match(T__29);
				}
				break;
				case T__30:
					_localctx = new DistlContext(_localctx);
					enterOuterAlt(_localctx, 13);
				{
					setState(111);
					match(T__30);
				}
				break;
				case T__31:
					_localctx = new DistrContext(_localctx);
					enterOuterAlt(_localctx, 14);
				{
					setState(112);
					match(T__31);
				}
				break;
				case T__32:
					_localctx = new IotaContext(_localctx);
					enterOuterAlt(_localctx, 15);
				{
					setState(113);
					match(T__32);
				}
				break;
				default:
					throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final AtomContext atom() throws RecognitionException {
		AtomContext _localctx = new AtomContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_atom);
		try {
			setState(119);
			switch (_input.LA(1)) {
				case NUM:
					enterOuterAlt(_localctx, 1);
				{
					setState(116);
					match(NUM);
				}
				break;
				case BOOL:
					enterOuterAlt(_localctx, 2);
				{
					setState(117);
					match(BOOL);
				}
				break;
				case T__33:
				case T__34:
					enterOuterAlt(_localctx, 3);
				{
					setState(118);
					list();
				}
				break;
				default:
					throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final ListContext list() throws RecognitionException {
		ListContext _localctx = new ListContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_list);
		int _la;
		try {
			setState(133);
			switch (_input.LA(1)) {
				case T__33:
					enterOuterAlt(_localctx, 1);
				{
					setState(121);
					match(T__33);
				}
				break;
				case T__34:
					enterOuterAlt(_localctx, 2);
				{
					setState(122);
					match(T__34);
					setState(123);
					atom();
					setState(128);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la == T__11) {
						{
							{
								setState(124);
								match(T__11);
								setState(125);
								atom();
							}
						}
						setState(130);
						_errHandler.sync(this);
						_la = _input.LA(1);
				}
					setState(131);
					match(T__35);
				}
				break;
				default:
					throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public boolean sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
		switch (ruleIndex) {
			case 3:
				return functional_form_sempred((Functional_formContext) _localctx, predIndex);
		}
		return true;
	}

	private boolean functional_form_sempred(Functional_formContext _localctx, int predIndex) {
		switch (predIndex) {
			case 0:
				return precpred(_ctx, 2);
		}
		return true;
	}

	public static class ProgramContext extends ParserRuleContext {
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}

		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class, i);
		}

		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}

		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class, i);
		}

		@Override
		public int getRuleIndex() {
			return RULE_program;
		}
		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof FPParserListener) ((FPParserListener) listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof FPParserListener) ((FPParserListener) listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof FPParserVisitor) return ((FPParserVisitor<? extends T>) visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public static class DefinitionContext extends ParserRuleContext {
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		public TerminalNode FUN_ID() {
			return getToken(FPParserParser.FUN_ID, 0);
		}

		public Functional_formContext functional_form() {
			return getRuleContext(Functional_formContext.class, 0);
		}

		@Override
		public int getRuleIndex() {
			return RULE_definition;
		}
		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof FPParserListener) ((FPParserListener) listener).enterDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof FPParserListener) ((FPParserListener) listener).exitDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof FPParserVisitor)
				return ((FPParserVisitor<? extends T>) visitor).visitDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		public Functional_formContext functional_form() {
			return getRuleContext(Functional_formContext.class, 0);
		}

		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class, 0);
		}

		public AtomContext atom() {
			return getRuleContext(AtomContext.class, 0);
		}

		@Override
		public int getRuleIndex() {
			return RULE_expression;
		}
		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof FPParserListener) ((FPParserListener) listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof FPParserListener) ((FPParserListener) listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof FPParserVisitor)
				return ((FPParserVisitor<? extends T>) visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public static class Functional_formContext extends ParserRuleContext {
		public Functional_formContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		public Functional_formContext() {
		}

		@Override
		public int getRuleIndex() {
			return RULE_functional_form;
		}

		public void copyFrom(Functional_formContext ctx) {
			super.copyFrom(ctx);
		}
	}

	public static class ConstructionLabelContext extends Functional_formContext {
		public ConstructionLabelContext(Functional_formContext ctx) {
			copyFrom(ctx);
		}

		public ConstructionContext construction() {
			return getRuleContext(ConstructionContext.class, 0);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof FPParserListener) ((FPParserListener) listener).enterConstructionLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof FPParserListener) ((FPParserListener) listener).exitConstructionLabel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof FPParserVisitor)
				return ((FPParserVisitor<? extends T>) visitor).visitConstructionLabel(this);
			else return visitor.visitChildren(this);
		}
	}

	public static class InsertLeftContext extends Functional_formContext {
		public InsertLeftContext(Functional_formContext ctx) {
			copyFrom(ctx);
		}

		public Functional_formContext functional_form() {
			return getRuleContext(Functional_formContext.class, 0);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof FPParserListener) ((FPParserListener) listener).enterInsertLeft(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof FPParserListener) ((FPParserListener) listener).exitInsertLeft(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof FPParserVisitor)
				return ((FPParserVisitor<? extends T>) visitor).visitInsertLeft(this);
			else return visitor.visitChildren(this);
		}
	}

	public static class ConstantLabelContext extends Functional_formContext {
		public ConstantLabelContext(Functional_formContext ctx) {
			copyFrom(ctx);
		}

		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class, 0);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof FPParserListener) ((FPParserListener) listener).enterConstantLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof FPParserListener) ((FPParserListener) listener).exitConstantLabel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof FPParserVisitor)
				return ((FPParserVisitor<? extends T>) visitor).visitConstantLabel(this);
			else return visitor.visitChildren(this);
		}
	}

	public static class CompositionContext extends Functional_formContext {
		public CompositionContext(Functional_formContext ctx) {
			copyFrom(ctx);
		}

		public List<Functional_formContext> functional_form() {
			return getRuleContexts(Functional_formContext.class);
		}

		public Functional_formContext functional_form(int i) {
			return getRuleContext(Functional_formContext.class, i);
		}

		public TerminalNode DOT() {
			return getToken(FPParserParser.DOT, 0);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof FPParserListener) ((FPParserListener) listener).enterComposition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof FPParserListener) ((FPParserListener) listener).exitComposition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof FPParserVisitor)
				return ((FPParserVisitor<? extends T>) visitor).visitComposition(this);
			else return visitor.visitChildren(this);
		}
	}

	public static class ApplyAllContext extends Functional_formContext {
		public ApplyAllContext(Functional_formContext ctx) {
			copyFrom(ctx);
		}

		public Functional_formContext functional_form() {
			return getRuleContext(Functional_formContext.class, 0);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof FPParserListener) ((FPParserListener) listener).enterApplyAll(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof FPParserListener) ((FPParserListener) listener).exitApplyAll(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof FPParserVisitor) return ((FPParserVisitor<? extends T>) visitor).visitApplyAll(this);
			else return visitor.visitChildren(this);
		}
	}

	public static class ConditionalLabelContext extends Functional_formContext {
		public ConditionalLabelContext(Functional_formContext ctx) {
			copyFrom(ctx);
		}

		public ConditionalContext conditional() {
			return getRuleContext(ConditionalContext.class, 0);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof FPParserListener) ((FPParserListener) listener).enterConditionalLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof FPParserListener) ((FPParserListener) listener).exitConditionalLabel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof FPParserVisitor)
				return ((FPParserVisitor<? extends T>) visitor).visitConditionalLabel(this);
			else return visitor.visitChildren(this);
		}
	}

	public static class ElementaryContext extends Functional_formContext {
		public ElementaryContext(Functional_formContext ctx) {
			copyFrom(ctx);
		}

		public FunctionContext function() {
			return getRuleContext(FunctionContext.class, 0);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof FPParserListener) ((FPParserListener) listener).enterElementary(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof FPParserListener) ((FPParserListener) listener).exitElementary(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof FPParserVisitor)
				return ((FPParserVisitor<? extends T>) visitor).visitElementary(this);
			else return visitor.visitChildren(this);
		}
	}

	public static class WhileContext extends Functional_formContext {
		public WhileContext(Functional_formContext ctx) {
			copyFrom(ctx);
		}

		public List<Functional_formContext> functional_form() {
			return getRuleContexts(Functional_formContext.class);
		}

		public Functional_formContext functional_form(int i) {
			return getRuleContext(Functional_formContext.class, i);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof FPParserListener) ((FPParserListener) listener).enterWhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof FPParserListener) ((FPParserListener) listener).exitWhile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof FPParserVisitor) return ((FPParserVisitor<? extends T>) visitor).visitWhile(this);
			else return visitor.visitChildren(this);
		}
	}

	public static class InsertRightContext extends Functional_formContext {
		public InsertRightContext(Functional_formContext ctx) {
			copyFrom(ctx);
		}

		public Functional_formContext functional_form() {
			return getRuleContext(Functional_formContext.class, 0);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof FPParserListener) ((FPParserListener) listener).enterInsertRight(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof FPParserListener) ((FPParserListener) listener).exitInsertRight(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof FPParserVisitor)
				return ((FPParserVisitor<? extends T>) visitor).visitInsertRight(this);
			else return visitor.visitChildren(this);
		}
	}

	public static class ParenthsContext extends Functional_formContext {
		public ParenthsContext(Functional_formContext ctx) {
			copyFrom(ctx);
		}

		public Functional_formContext functional_form() {
			return getRuleContext(Functional_formContext.class, 0);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof FPParserListener) ((FPParserListener) listener).enterParenths(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof FPParserListener) ((FPParserListener) listener).exitParenths(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof FPParserVisitor) return ((FPParserVisitor<? extends T>) visitor).visitParenths(this);
			else return visitor.visitChildren(this);
		}
	}
